Popup adjusts to stay within the viewport, popup can scroll to accomdate more content, scrollbar styled to match color scheme, user is prompted to give more of their own data relates to issues #6 #10

--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -13,3 +13,22 @@
   top: 52px;
   right: 8px;
 }
+
+/* Scroll Bar CSS */
+
+.leaflet-popup-scrolled::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+.leaflet-popup-scrolled::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+.leaflet-popup-scrolled::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #ff80cc;
+}
